--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -128,7 +128,7 @@ li:hover {
     padding: 3%;
 }
 
-.recibos-pendientes{
+.listadash{
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
@@ -471,4 +471,15 @@ section {
 }
 
    
-   
+.dashboard-card {
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 12%), 0px 1px 3px rgb(0 0 0 / 20%);
+    border-radius: 4px;
+    margin: 0rem;
+    padding: 1rem;
+    flex-grow: 1;
+    margin: 1% !important;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
