--- a/resources/css/botones.css
+++ b/resources/css/botones.css
@@ -22,6 +22,11 @@ button:active {
     box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
+button{
+
+    box-shadow: 0px 4px 5px rgb(0 0 0 / 8%), 0px 1px 10px rgb(0 0 0 / 12%), 0px 2px 4px rgb(0 0 0 / 10%);
+}
+
 
 .btn-rojo {
     background: #b90c0c;
