--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -480,3 +480,30 @@ section {
     flex-direction: column;
     align-items: flex-start;
 }
+
+.shade-screen-container{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    z-index: 100;
+    background-color: black;
+    opacity: 0.4;
+}
+
+.modalbusqueda{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 80vw;
+    max-height: 90vh;
+    border-radius: 0.5rem;
+    transform: translate(-50%,-50%);
+    background-color: white;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
