--- a/resources/css/botones.css
+++ b/resources/css/botones.css
@@ -149,3 +149,55 @@ button{
   .cerrar-sesion:active {
     box-shadow: inset 0 0 2px 2px rgba(0, 0, 0, 0.2);
   }
+
+
+  .switch input {
+    display: none;
+   }
+   
+   .switch {
+    width: 60px;
+    height: 30px;
+    position: relative;
+    display: block !important;
+   }
+   
+   .slider {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 30px;
+    box-shadow: 0 0 0 2px orange, 0 0 4px orange;
+    cursor: pointer;
+    border: 4px solid transparent;
+    overflow: hidden;
+    transition: 0.2s;
+    background-color: rgb(220, 220, 220)
+   }
+   
+   .slider:before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 30px;
+    transform: translateX(-30px);
+
+    transition: 0.2s;
+   }
+   
+   input:checked + .slider:before {
+    transform: translateX(30px);
+    background-color: white;
+   }
+   
+   input:checked + .slider {
+     background-color: #EA580C;
+   }
+
+   
+   
+   
