--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,15 +14,18 @@
     margin: 0px 0px 0px 250px;
     padding-top: 7vh;
     border-left: 2px solid #f1f1f1;
+    max-height: 100vh;
     height: 100vh;
+    background-color: rgb(247 247 247);
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .contenedor{
-    --tw-bg-opacity: 1;
-    background-color: rgb(247 247 247 / var(--tw-bg-opacity));
     display: flex;
     flex-direction: column;
-    min-height: 93vh;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -95,11 +98,11 @@ img {
  display: initial;
 }
 
-li {
+.li-menu {
 font-weight: 800;
 }
 
-li:hover {
+.li-menu:hover {
     background-color: #f5f5f5;
     font-weight: 800;
     border-right: 4px solid #b03407;
